ZStdDecompressStream: allow leaving stream open

--- a/ImpromptuNinjas.ZStd/ImpromptuNinjas.ZStd.csproj
+++ b/ImpromptuNinjas.ZStd/ImpromptuNinjas.ZStd.csproj
@@ -22,6 +22,7 @@
         <PackageIcon>icon.png</PackageIcon>
         <IsPackable>True</IsPackable>
         <GenerateAssemblyConfigurationAttribute>False</GenerateAssemblyConfigurationAttribute>
+        <SignAssembly>False</SignAssembly>
     </PropertyGroup>
 
     <ItemGroup>
